# dynamic-ui-agent

./: .gitignore  .sample-env  README.md  pyproject.toml
__instructions__/: A2UI.md  Demo Script.md  Gemini.md  Testing.md  UI.md
agent_app/: agent.py
data/: product_book.json  product_compare.json  product_negotiate.json  product_search.json
scripts/: activate.sh  run_demo.sh  run_server_tests.sh  run_ui_tests.sh
servers/: agent_server.py  mock_api_server.py
tests/: conftest.py  test_agent_server.py  test_agent_server_integration.py  test_agent_server_tool_logic.py  test_mock_api_server.py  test_tools.py
ui-tests/: package-lock.json  package.json  playwright.config.ts  test_output.txt  test_output_manual.txt
ui-tests/tests/: 01_chat_basics.spec.ts  02_chat_flow.spec.ts  03_agent_info.spec.ts  04_agent_action.spec.ts  05_vehicle_compare.spec.ts  06_clear_chat.spec.ts  07_search_cars.spec.ts  08_conversational_text.spec.ts
web/: README.md  angular.json  package-lock.json  package.json
web/src/: index.html  styles.css
web/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
web/src/app/chat/: chat.css  chat.html  chat.spec.ts  chat.ts
web/src/app/directives/: auto-focus.directive.ts
web/src/app/gen-ui/: gen-ui.component.ts
web/src/app/services/: agent.spec.ts  agent.ts
web/src/app/shared/a2ui/: a2ui.service.ts  message-processor.ts  surface.component.ts
web/src/app/shared/a2ui/components/card/: card.component.ts
web/src/app/shared/a2ui/components/form/: form.component.ts
web/src/app/shared/a2ui/components/table/: table.component.ts
web/src/environments/: environment.ts
